Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24392

execute immediate '/*M!100601 select 10_6_only_sql */' returns error incorrectly

    XMLWordPrintable

Details

    Description

      execute immediate '/* nothing */' -> "This command is not supported in the prepared statement protocol yet"

      (tested 10.2.38)

      Workarounds of doing an empty string work.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.