MDEV-24392 Added support for EXECUTE_IMMEDIATE command to handle empty queries